<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Raa Partner</string>
    <string name="app_noti">This app is collects location data to enable duty even when the app is closed or not in use</string>
    <string name="eng">English</string>
    <string name="guja">Gujarati</string>
    <string name="hindi">Hindi</string>
    <string name="marathi">Marathi</string>
    <string name="selectle">Please select language for the Application</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="send">SEND</string>
    <string name="mobilenumber">Enter your mobile number</string>
    <string name="pass">Password</string>
    <string name="cpass">Confirm Password</string>
    <string name="enter_source" translatable="false">Enter Picup Location</string>
    <string name="enter_dest" translatable="false">Enter Drop location</string>
    <string name="forgetpass">Forgot Password?</string>
    <string name="dontaccount">Don\'t have an account?</string>
    <string name="startpoint">Start address : </string>
    <string name="clear_pad" translatable="false">Clear Pad</string>
    <string name="save_signature" translatable="false">Save Signature</string>
    <string name="endpoint">End address : </string>
    <string name="regnow">Register now!</string>
    <string name="custwaiting">Please wait while looking for the car for you.</string>
    <string name="alaccount">Already have an account?</string>
    <string name="internet_not">RaaDarbar App : Internet is not working</string>
    <string name="thanksstring" translatable="false">You can not go back please click on skip or Give us rating</string>
    <string name="loginnow">Login now!</string>
    <string name="forgetpassnew">FORGOT PASSWORD</string>
    <string name="forgetpasstext">Enter email address associated with your account</string>
    <string name="resetlink">We will email you a link to reset your password</string>
    <string name="emialenter">Enter Email Address</string>
    <string name="yourestimatedprice">Your Estimated Price</string>
    <string name="fname">Full Name</string>
    <string name="nocar">No car available</string>
    <string name="lname">Last Name</string>
    <string name="mname">Middle Name</string>
    <string name="first_name">First Name</string>
    <string name="emailadd">Email Address</string>
    <string name="signup">SIGNUP</string>
    <string name="enterriqiredfild">Please enter required field</string>
    <string name="signuptext">Enter your personal detail and start your journey today</string>
    <string name="safety" translatable="false">Your safety is our Religion</string>
    <string name="emailandpass">Please enter email and password</string>
    <string name="allrequired">Please fill all required field</string>
    <string name="emailvalid">Please enter valid email-id</string>
    <string name="title_activity_cust_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ridebook">Book your ride</string>
    <string name="ridehi">Ride History</string>
    <string name="ridenow">Ride Now</string>
    <string name="ridelater">Ride Later</string>
    <string name="selectvihicle">Select Vehicle</string>
    <string name="SelectLanguageactivity">Language Setting Page</string>
    <string name="source">Source(if you do not enter than it takes by default current position)</string>
    <string name="destination">Destination</string>
    <string name="help">Customer Care</string>
    <string name="error_time_before">Time should be at least before half hour!</string>
    <string name="forspinnar">Select your car</string>
    <string name="conbooking">Confirm Booking</string>
    <string name="paymentpage">Payment Page</string>
    <string name="ridehistry">Ride History</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="versionName" translatable="false">Version Name</string>
    <string name="youAreNotUpdatedMessage">A new version of Raa Cab Service is available. Please Update First for Better Experience</string>
    <string name="update" translatable="false">Update</string>
    <string name="duty">Duty</string>
    <string name="conpayment">Confirm Payment</string>
    <string name="authorizedparson">You are not authorized please contact to admin for login</string>
    <string name="on_duty">You are On duty!</string>
    <string name="off_duty">You are Off duty!</string>
    <string name="selectjou">Select Journey</string>
    <string name="thankstext">Thanks For Trip</string>
    <string name="giveratinguser">Give user rating</string>
    <string name="selectfuel">Select Fuel Type</string>
    <string name="selectcar">Select Car</string>
    <string name="selectfueltype">Select fuel type first</string>
    <string name="singleway">Single Way</string>
    <string name="returntrip">Return Trip</string>
    <string name="next">Next</string>
    <string name="sedan" translatable="false">Sedan</string>
    <string name="suv" translatable="false">SUV</string>
    <string name="micromini" translatable="false">Micro/Mini</string>
    <string name="diesel" translatable="false">Diesel</string>
    <string name="petrol" translatable="false">Petrol</string>
    <string name="cng" translatable="false">CNG</string>
    <string name="logoutstingfordriver" translatable="true">You cannot log out without finish Trip. If you have any problem then Contact to admin.</string>
    <string name="updatestringfordriver">You cannot assign driver without finish Trip. If you have any problem then Contact to admin.</string>
    <string name="errormsg" translatable="false">Please check your internet connection and try again.</string>
    <string name="incity">In city</string>
    <string name="outcity">Out city</string>
    <string name="rental">Rental</string>
    <string name="helpmsg">Please wait we will call back to you with in 15 minutes</string>
    <string name="helppage">Raa -App Help Page</string>
    <string name="helpstring">Please call this Number</string>
    <string name="helpeditstring">Please Enter Message/Feedback</string>
    <string name="alert" translatable="false">Alert</string>
    <string name="fare">Fare rate for</string>
    <string name="wiilbe">Will be</string>
    <string name="pricediff">Price are different for selected car</string>
    <string name="conride">Confirm Trip</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="title_activity_select_pakeges">Select_pakeges</string>
    <string name="succreg">Successful Registration</string>
    <string name="title_activity_cutomore_map">Map</string>
    <string name="destinationprovaid">Please provide destination</string>
    <string name="sourcenprovaid" translatable="false">Please provide source</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="triptype">Trip type</string>
    <string name="tripnotaveleble">No Trips Available</string>
    <string name="incityselected">Please Select In City</string>
    <string name="outcityselected">Please Select Out City</string>
    <string name="cartype">Please select car type</string>
    <string name="uploaddoc">Upload your document</string>
    <string name="bookingdone">Your booking done successfully!!</string>
    <string name="conditionofpackage">Please provide your id (Aadhar card, Driving Licence or election card) only for security purpose if your payment goes above 10000/-</string>
    <string name="jarny">Your Journey is about </string>
    <string name="jarnyone"> and based on your journey this package is default selected.</string>
    <string name="title_activity_drivar__home__page" translatable="false">Drivar_Home_Page</string>
    <string name="endotp" translatable="false">Ending OTP</string>
    <string name="endkm" translatable="true">End KM</string>
    <string name="enterkm" translatable="true">Finish KM</string>
    <string name="startkm" translatable="true">Start KM</string>
    <string name="startotp" translatable="true">Start OTP</string>
    <string name="talltax" translatable="true">Toll Tax</string>
    <string name="bodertax" translatable="true">Border Tax</string>
    <string name="driverhold" translatable="true">Driver night halt charge</string>
    <string name="back">Back</string>
    <string name="driverallowance" translatable="true">Driver Allowance</string>
    <string name="daily_account">Daily Account</string>
    <string name="monthaly_account">Monthly Account</string>
    <string name="training">Training</string>
    <string name="profile">Profile</string>
    <string name="km" translatable="false">KM</string>
    <string name="dateandtime" translatable="false">Date and Time</string>
    <string name="price" translatable="false">Price</string>
    <string name="parmitioncharge" translatable="true">Other Charge</string>
    <string name="parkingchage" translatable="true">Parking Charge</string>
    <string name="tripamount">Trip amount not found</string>
    <string name="nodata" translatable="false">No Data Found</string>
    <string name="access_code" translatable="false">Access Code</string>
    <string name="merchant_id" translatable="false">Marchand ID</string>
    <string name="currency" translatable="false">Currency</string>
    <string name="amount" translatable="false">Amount</string>
    <string name="redirect_url" translatable="false">Redirect Url</string>
    <string name="cancel_url" translatable="false">Cancel URL</string>
    <string name="rsa_url" translatable="false">RSA URL</string>
    <string name="pay_button" translatable="false">Pay Button</string>
    <string name="notification_channel_id" translatable="false">10001</string>
    <string name="sure">Are you sure?</string>
    <string name="clogout">You are going to Logout</string>
    <string name="confirmation">Confirmation</string>
    <string name="cancel_ride_confrim" translatable="false">Do you want to cancel trip?</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="driverinstractiuon" translatable="true">Trip gone to other driver</string>
    <string name="goback" translatable="false">Go Back</string>
    <string name="endingtimepreselected" translatable="true">Set approx end time of trip</string>
    <string name="statingtimepreselected" translatable="true">Start time of trip</string>
    <string name="continue_txt">Verify</string>
    <string name="Registration">Register</string>
    <string name="verification_code_txt">Verification Code</string>
    <string name="please_type_verification_code">Please type the varification code</string>
    <string name="switchcar">Switch Car</string>
    <string name="raa_wallet">Raa Wallet</string>
    <string name="refer">Refer &amp; Earn </string>
    <string name="Assign">Assign</string>
    <string name="refertitle" translatable="false">Forward and get 50 rupees cashback.</string>
    <string name="referdescription" translatable="false">Download Get Rs 50 Cashback And Trip It And Get Another Rs 50. </string>
    <string name="rs">\u20B9</string>
    <string name="default_notification_channel_id">10001</string>
    <string name="facebook_app_id" translatable="false">622865798496576</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb622865798496576</string>
    <string name="missed_trip">Missed Trip</string>
    <string name="assign_driver">Assign Driver</string>
    <string name="time_log">Time Log</string>
</resources>