<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SelectLanguageActivity"
    android:background="@drawable/raabg">

    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:elevation="10dp"
        android:layout_centerInParent="true"
        android:layout_margin="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/raalogo_white" />

        <com.pbt.raadrivers.Fonts.CTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectle"
            android:textSize="25dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.pbt.raadrivers.Fonts.CTextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <com.pbt.raadrivers.Fonts.CTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/eng"
                    android:elevation="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="@string/eng" />

                <com.pbt.raadrivers.Fonts.CTextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <com.pbt.raadrivers.Fonts.CTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/guj"
                    android:elevation="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="@string/guja" />

                <com.pbt.raadrivers.Fonts.CTextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <com.pbt.raadrivers.Fonts.CTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/hindi"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:elevation="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textStyle="bold"
                    android:text="@string/hindi" />

                <com.pbt.raadrivers.Fonts.CTextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <com.pbt.raadrivers.Fonts.CTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/marathi"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:elevation="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textStyle="bold"
                    android:text="@string/marathi" />

                <com.pbt.raadrivers.Fonts.CTextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>